@@ -8,7 +8,7 @@
  * See the file "license.terms" for information on usage and redistribution
  * of this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: BlendExtension.java,v 1.13 1999/08/03 04:01:07 mo Exp $
+ * RCS: @(#) $Id: BlendExtension.java,v 1.14 1999/08/09 08:52:36 mo Exp $
  */
 
 package tcl.lang;
@@ -36,9 +36,6 @@ init(
     Interp interp)		// Interpreter to intialize.
 throws TclException
 {
-    // init Java object reflection system
-    ReflectObject.ensureInit(interp);
-
     // Create the commands in the Java package
 
     loadOnDemand(interp, "java::bind",        "tcl.lang.JavaBindCmd");
